# zed-rs-api

./: Cargo.toml  LICENSE  LICENSE-MIT  LICENSE-upstream  README.md  build.rs  wrapper.h  zed_interface.h
src/: lib.rs
